--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,14 @@ requests = "^2.32.4"
 asyncpg = "^0.30.0"
 gunicorn = "^23.0.0"
 pypdf = "^5.7.0"
-beautifulsoup4 = "^4.13.4"
 langdetect = "^1.0.9"
 openpyxl = "^3.1.5"
 python-docx = "^1.2.0"
 httpx = "^0.28.1"
 python-dateutil = "^2.9.0.post0"
 pydantic-settings = "^2.10.1"
+sentence-transformers = "^5.0.0"
+python-multipart = "^0.0.20"
 
 
 [tool.poetry.group.dev.dependencies]
