--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ fastapi = "^0.116.0"
 gunicorn = "^23.0.0"
 pypdf = "^5.7.0"
 langdetect = "^1.0.9"
-openpyxl = "^3.1.5"
 python-docx = "^1.2.0"
 python-dateutil = "^2.9.0.post0"
 pydantic-settings = "^2.10.1"
@@ -27,6 +26,7 @@ uvicorn = "^0.35.0"
 black = "^25.1.0"
 pytest-mock = "^3.14.1"
 ruff = "^0.12.2"
+pytest-cov = "^6.2.1"
 
 [build-system]
 requires = ["poetry-core"]
