--- a/.env.example
+++ b/.env.example
@@ -37,7 +37,7 @@ API_DESCRIPTION=""
 # [default: "0.1.0"]
 API_VERSION="0.1.0"
 
-# URL, по которому доступна спецификация OpenAPI. Можно отключить (None) в продакшене.
+# URL, по которому доступна спецификация OpenAPI. Можно отключить (None).
 # [default: "/openapi.json"]
 OPENAPI_URL="/openapi.json"
 
@@ -45,14 +45,81 @@ OPENAPI_URL="/openapi.json"
 # [default: ""]
 OPENAPI_PREFIX = ""
 
-# URL Swagger UI. Можно отключить или изменить (e.g. /api/docs).
+# URL Swagger UI. Можно отключить (None) или изменить (e.g. /api/docs).
 # [default: "/docs"]
 DOCS_URL="/docs"
 
-# URL ReDoc. Можно отключить или изменить (e.g. /api/redoc).
+# URL ReDoc. Можно отключить (None) или изменить (e.g. /api/redoc).
 # [default: "/redoc"]
 REDOC_URL="/redoc"
 
 # Если API за proxy с префиксом (например, `X-Forwarded-Prefix`), указываете его здесь.
 # [default: ""]
 ROOT_PATH=""
+
+
+# **Настройки Embedding модели**
+
+# Название модели (подготовленная заранее в SentenceTransformer, или Hugging Face Hub) или путь к модели на диске.
+# [default: "sentence-transformers/all-MiniLM-L6-v2"]
+EMBEDDING_MODEL_NAME="sentence-transformers/all-MiniLM-L6-v2"
+
+# Устройство (например, "cuda", "cpu", "mps", "npu"), которое должно использоваться для вычислений.
+# Если None, проверяет, можно ли использовать графический процессор.
+# [default: "None"]
+EMBEDDING_MODEL_DEVICE="None"
+
+# Путь к хранилищу моделей. Также может быть задан переменной окружения SENTENCE_TRANSFORMERS_HOME.
+# [default: "None"]
+EMBEDDING_MODEL_CACHE_FOLDER="None"
+
+# Аутентификационный токен Hugging Face для загрузки приватных моделей.
+# [default: "None"]
+EMBEDDING_MODEL_TOKEN="None"
+
+
+# **Настройки логирования**
+
+# Уровень логирования (TRACE, DEBUG, INFO, SUCCESS, WARNING, ERROR, CRITICAL)
+# [default: "INFO"]
+LOG_LEVEL="INFO"
+
+# Формат лога, например "{time} - {level} - {message}"
+# Подробнее: https://loguru.readthedocs.io/en/stable/api/logger.html#record
+# [default: "{message}"]
+LOG_FORMAT="{message}"
+
+# Сериализация в JSON. Может быть True или False
+# [default: "True"]
+LOG_SERIALIZE="True"
+
+# Ротация логов, например "1 day"
+# Подробнее: https://loguru.readthedocs.io/en/stable/api/logger.html#time
+# [default: "1 day"]
+LOG_ROTATION="1 day"
+
+# Параметр определяет - какие и сколько старых файлов логов вы хотите хранить, а какие автоматически удалять.
+# Если вы задаёте его как строку с единицами измерения, например "7 days", то будут сохраняться только архивы логов
+# за последние семь дней, а более старые файлы автоматически удалятся. Можно указать ограничение по количеству файлов,
+# например "10 files" - будет храниться только 10 самых свежих лог‑архивов.
+# Подробнее: https://loguru.readthedocs.io/en/stable/api/logger.html#file
+# [default: "14 days"]
+LOG_RETENTION="14 days"
+
+# Параметр указывает, как архивировать старые лог-файлы при ротации. Когда достигается условие ротации
+# (по размеру, времени и т.п.), текущий лог-файл переименовывается и, если вы задали compression,
+# дополнительно сжимается.
+# Подробнее: https://loguru.readthedocs.io/en/stable/api/logger.html#file
+# [default: "zip"]
+LOG_COMPRESSION="zip"
+
+
+# **Настройки разделителя текста**
+
+# Максимальная длина одного чанка в символах.
+# [default: "500"]
+TEXT_SPLITTER_CHUNK_SIZE="500"
+
+# Число символов перекрытия между соседними чанками.
+# [default: "50"]
+TEXT_SPLITTER_CHUNK_OVERLAP="50"
