--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,7 @@ API_VERSION="0.1.0"
 # [default: "/openapi.json"]
 OPENAPI_URL="/openapi.json"
 
-# Префикс для всех путей OpenAPI (например, если API за reverse‑proxy под /api/v1).
+# Префикс для всех путей OpenAPI (например, если API за reverse-proxy под /api/v1).
 # [default: ""]
 OPENAPI_PREFIX = ""
 
