--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,7 @@ langchain = "^0.3.26"
 python-magic = "^0.4.27"
 uvicorn = "^0.35.0"
 loguru = "^0.7.3"
-numpy = "^2.3.1"
-scipy = "^1.16.0"
+streamlit = "^1.47.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
