--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ langdetect = "^1.0.9"
 python-docx = "^1.2.0"
 python-dateutil = "^2.9.0.post0"
 pydantic-settings = "^2.10.1"
+tokenizers = "0.20.2"
 sentence-transformers = "^5.0.0"
 python-multipart = "^0.0.20"
 langchain = "^0.3.26"
