--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ black = "^25.1.0"
 pytest-mock = "^3.14.1"
 ruff = "^0.12.2"
 pytest-cov = "^6.2.1"
+reportlab = "^4.4.3"
 
 [build-system]
 requires = ["poetry-core"]
