--- a/.env.example
+++ b/.env.example
@@ -116,10 +116,10 @@ LOG_COMPRESSION="zip"
 
 # **Настройки разделителя текста**
 
-# Максимальная длина одного чанка в символах.
+# Максимальная длина одного фрагмента в символах.
 # [default: "500"]
 TEXT_SPLITTER_CHUNK_SIZE="500"
 
-# Число символов перекрытия между соседними чанками.
+# Число символов перекрытия между соседними фрагментами.
 # [default: "50"]
 TEXT_SPLITTER_CHUNK_OVERLAP="50"
