--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ asyncpg = "^0.30.0"
 sqlalchemy = "^2.0.42"
 mammoth = "^1.10.0"
 weasyprint = "^66.0"
+minio = "^7.2.16"
 
 [tool.poetry.group.ui.dependencies]
 streamlit = "^1.47.0"
