--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,99 @@
 # По умолчанию сервис использует локальные заглушки.
-# Чтобы в будущем использовать рабочие реализации, вам следует раскомментировать и установить эти:
-#
-# S3_BUCKET="my-production-bucket"
-#
-# PINECONE_API_KEY="your-pinecone-api-key"
-#
-# DATABASE_URL="postgresql://user:password@host:port/dbname"
+
+
+# **Настройки PostgreSQL (или другой БД)**
+
+# БД
+# [default: "postgresql"]
+DATABASE_DIALECT="postgresql"
+
+# Драйвер для БД
+# [default: "asyncpg"]
+DATABASE_DRIVER="asyncpg"
+
+# Логин БД
+# [default: "postgres"]
+DATABASE_USERNAME="postgres"
+
+# Пароль БД
+# [default: "postgres"]
+DATABASE_PASSWORD="postgres"
+
+# Хост БД
+# [default: "localhost"]
+DATABASE_HOST="localhost"
+
+# Порт БД
+# [default: "5432"]
+DATABASE_PORT="5432"
+
+# Название БД
+# [default: "postgres"]
+DATABASE_NAME="postgres"
+
+# Включает логирование SQL-запросов/операций SQLAlchemy на stdout (или в логгер).
+# [default: "False"]
+DATABASE_ECHO="False"
+
+# Включает логирование событий пула подключений (чек-аут / возврат соединения)
+# [default: "False"]
+DATABASE_ECHO_POOL="False"
+
+# Перед выдачей соединения проверяет "alive"-состояние (ping) соединения.
+# Если соединение закрыто на стороне сервера, пул выбрасывает его и создаёт новое.
+# Это помогает избежать ошибок из-за таймаута/закрытия соединений со стороны БД (особенно у облачных провайдеров).
+# [default: "True"]
+DATABASE_POOL_PRE_PING="True"
+
+# Когда True, перед выполнением запросов (query/scalar и т.п.) Session автоматически вызывает flush(),
+# т.е. отправляет в БД все накопленные изменения (INSERT/UPDATE/DELETE), чтобы результаты запросов
+# были последовательны с текущим состоянием сессии.
+# [default: "False"]
+DATABASE_AUTO_FLUSH="False"
+
+# В старых версиях SQLAlchemy autocommit=True переводило сессию в "режим без транзакции",
+# т.е. позволялo выполнять операции без явного begin() / commit().
+# Устарел/удалён в подходе SQLAlchemy 2.0; его использование не рекомендуется.
+# [default: "False"]
+DATABASE_AUTO_COMMIT="False"
+
+# После коммита объекты в сессии помечаются как expired - при следующем доступе к атрибуту
+# SQLAlchemy попытается автоматически подгрузить актуальные данные из БД (выполнит SELECT).
+# Если False, объекты остаются валидными в памяти и не будут автоматически "проверяться"/обновляться после коммита.
+# [default: "False"]
+DATABASE_EXPIRE_ON_COMMIT="False"
+
+
+# **Настройки MinIO**
+
+# Адрес MinIO/S3-совместимого сервера.
+# Обычно в виде host:port (например minio.local:9000) или URL без схемы.
+# [default: "None"]
+MINIO_ENDPOINT="None"
+
+# Имя бакета (bucket), в котором будут храниться файлы.
+# [default: "None"]
+MINIO_BUCKET="None"
+
+# Публичный ключ / идентификатор доступа для аутентификации к MinIO/S3.
+# [default: "None"]
+MINIO_ACCESS_KEY="None"
+
+# Секретный ключ для подписи запросов к сервису MinIO/S3.
+# [default: "None"]
+MINIO_SECRET_KEY="None"
+
+# Временный (STS) токен сессии - используется вместе с access_key/secret_key для временных учётных записей.
+# [default: "None"]
+MINIO_SESSION_TOKEN="None"
+
+# Флаг, указывающий, использовать ли TLS/HTTPS при подключении к адресу MinIO/S3.
+# [default: "False"]
+MINIO_SECURE="False"
+
+# Имя региона (например, 'us-east-1') - может влиять на создание бакетов и некоторые клиентские настройки.
+# [default: "None"]
+MINIO_REGION="None"
 
 
 # **Настройки заглушек для локальной разработки**
