Title 1. Test #1 2. Test #2 3. Test #3 4. Test #4 5. Test #5 6. Test #6 7. Test #7 8. Test #8 9. Test #9

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ weasyprint = "^66.0"
 minio = "^7.2.16"
 qdrant-client = "^1.15.1"
 solara = "^1.51.0"
+aiosqlite = "^0.21.0"
 
 [tool.poetry.group.ui.dependencies]
 streamlit = "^1.47.0"
