--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@
 
 # **Настройки PostgreSQL (или другой БД)**
 
+
+# db url scheme "dialect+driver://username:password@host:port/database"
+
+
 # БД
 # [default: "postgresql"]
 DATABASE_DIALECT="postgresql"
@@ -155,15 +159,15 @@ EMBEDDING_MODEL_NAME="sentence-transformers/all-MiniLM-L6-v2"
 # Устройство (например, "cuda", "cpu", "mps", "npu"), которое должно использоваться для вычислений.
 # Если None, проверяет, можно ли использовать графический процессор.
 # [default: "None"]
-EMBEDDING_MODEL_DEVICE="None"
+EMBEDDING_DEVICE="None"
 
 # Путь к хранилищу моделей. Также может быть задан переменной окружения SENTENCE_TRANSFORMERS_HOME.
 # [default: "None"]
-EMBEDDING_MODEL_CACHE_FOLDER="None"
+EMBEDDING_CACHE_FOLDER="None"
 
 # Аутентификационный токен Hugging Face для загрузки приватных моделей.
 # [default: "None"]
-EMBEDDING_MODEL_TOKEN="None"
+EMBEDDING_TOKEN="None"
 
 
 # **Настройки логирования**
@@ -211,3 +215,12 @@ TEXT_SPLITTER_CHUNK_SIZE="500"
 # Число символов перекрытия между соседними фрагментами.
 # [default: "50"]
 TEXT_SPLITTER_CHUNK_OVERLAP="50"
+
+
+# **Настройки времени**
+
+# Формат сериализации даты и времени.
+# В этот формат будут сериализованы все 'datetime' поля, отдаваемые API.
+# Подробнее о формате - https://docs.python.org/3/library/datetime.html#format-codes
+# [default: "%Y-%m-%d %H:%M:%S"]
+DATETIME_SERIALIZATION_FORMAT="%Y-%m-%d %H:%M:%S"
