--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # **Настройки PostgreSQL (или другой БД)**
 
 
-# db url scheme "dialect+driver://username:password@host:port/database"
+# db url scheme "dialect+driver://username:password@host:port/dbname"
 
 
 # БД
@@ -109,10 +109,6 @@ RAW_STORAGE_PATH="./local_storage/raw/"
 # Путь для хранения векторных документов.
 # [default: "./local_storage/index/"]
 INDEX_PATH="./local_storage/index/"
-
-# Путь к базе данных SQLite для хранения метаданных документа.
-# [default: "./local_storage/sqlite.db"]
-SQLITE_URL="./local_storage/sqlite.db"
 
 
 # **Настройки API**
