--- a/.env.example
+++ b/.env.example
@@ -1,116 +1,6 @@
 # По умолчанию сервис использует локальные заглушки.
 
 
-# **Настройки PostgreSQL (или другой БД)**
-
-
-# db url scheme "dialect+driver://username:password@host:port/dbname"
-
-
-# БД
-# [default: "postgresql"]
-DATABASE_DIALECT="postgresql"
-
-# Драйвер для БД
-# [default: "asyncpg"]
-DATABASE_DRIVER="asyncpg"
-
-# Логин БД
-# [default: "postgres"]
-DATABASE_USERNAME="postgres"
-
-# Пароль БД
-# [default: "postgres"]
-DATABASE_PASSWORD="postgres"
-
-# Хост БД
-# [default: "localhost"]
-DATABASE_HOST="localhost"
-
-# Порт БД
-# [default: "5432"]
-DATABASE_PORT="5432"
-
-# Название БД
-# [default: "postgres"]
-DATABASE_NAME="postgres"
-
-# Включает логирование SQL-запросов/операций SQLAlchemy на stdout (или в логгер).
-# [default: "False"]
-DATABASE_ECHO="False"
-
-# Включает логирование событий пула подключений (чек-аут / возврат соединения)
-# [default: "False"]
-DATABASE_ECHO_POOL="False"
-
-# Перед выдачей соединения проверяет "alive"-состояние (ping) соединения.
-# Если соединение закрыто на стороне сервера, пул выбрасывает его и создаёт новое.
-# Это помогает избежать ошибок из-за таймаута/закрытия соединений со стороны БД (особенно у облачных провайдеров).
-# [default: "True"]
-DATABASE_POOL_PRE_PING="True"
-
-# Когда True, перед выполнением запросов (query/scalar и т.п.) Session автоматически вызывает flush(),
-# т.е. отправляет в БД все накопленные изменения (INSERT/UPDATE/DELETE), чтобы результаты запросов
-# были последовательны с текущим состоянием сессии.
-# [default: "False"]
-DATABASE_AUTO_FLUSH="False"
-
-# В старых версиях SQLAlchemy autocommit=True переводило сессию в "режим без транзакции",
-# т.е. позволялo выполнять операции без явного begin() / commit().
-# Устарел/удалён в подходе SQLAlchemy 2.0; его использование не рекомендуется.
-# [default: "False"]
-DATABASE_AUTO_COMMIT="False"
-
-# После коммита объекты в сессии помечаются как expired - при следующем доступе к атрибуту
-# SQLAlchemy попытается автоматически подгрузить актуальные данные из БД (выполнит SELECT).
-# Если False, объекты остаются валидными в памяти и не будут автоматически "проверяться"/обновляться после коммита.
-# [default: "False"]
-DATABASE_EXPIRE_ON_COMMIT="False"
-
-
-# **Настройки MinIO**
-
-# Адрес MinIO/S3-совместимого сервера.
-# Обычно в виде host:port (например minio.local:9000) или URL без схемы.
-# [default: "None"]
-MINIO_ENDPOINT="None"
-
-# Имя бакета (bucket), в котором будут храниться файлы.
-# [default: "None"]
-MINIO_BUCKET="None"
-
-# Публичный ключ / идентификатор доступа для аутентификации к MinIO/S3.
-# [default: "None"]
-MINIO_ACCESS_KEY="None"
-
-# Секретный ключ для подписи запросов к сервису MinIO/S3.
-# [default: "None"]
-MINIO_SECRET_KEY="None"
-
-# Временный (STS) токен сессии - используется вместе с access_key/secret_key для временных учётных записей.
-# [default: "None"]
-MINIO_SESSION_TOKEN="None"
-
-# Флаг, указывающий, использовать ли TLS/HTTPS при подключении к адресу MinIO/S3.
-# [default: "False"]
-MINIO_SECURE="False"
-
-# Имя региона (например, 'us-east-1') - может влиять на создание бакетов и некоторые клиентские настройки.
-# [default: "None"]
-MINIO_REGION="None"
-
-
-# **Настройки заглушек для локальной разработки**
-
-# Путь для хранения необработанных файлов.
-# [default: "./local_storage/raw/"]
-RAW_STORAGE_PATH="./local_storage/raw/"
-
-# Путь для хранения векторных документов.
-# [default: "./local_storage/index/"]
-INDEX_PATH="./local_storage/index/"
-
-
 # **Настройки API**
 
 # Заголовок API, отображается в UI Swagger.
@@ -146,7 +36,58 @@ REDOC_URL="/redoc"
 ROOT_PATH=""
 
 
-# **Настройки Embedding модели**
+# **Настройки базы данных**
+
+# URL для подключения к базе данных
+# Схема URL - "dialect+driver://username:password@host:port/dbname"
+# [default: "sqlite+aiosqlite:///./local_storage/sqlite.db"]
+DATABASE_URL="postgresql+asyncpg://postgres:postgres@localhost:5432/postgres"
+
+# Включает логирование SQL-запросов/операций SQLAlchemy на stdout (или в логгер).
+# [default: "False"]
+DATABASE_ECHO="False"
+
+# Включает логирование событий пула подключений (чек-аут / возврат соединения)
+# [default: "False"]
+DATABASE_ECHO_POOL="False"
+
+# Перед выдачей соединения проверяет "alive"-состояние (ping) соединения.
+# Если соединение закрыто на стороне сервера, пул выбрасывает его и создаёт новое.
+# Это помогает избежать ошибок из-за таймаута/закрытия соединений со стороны БД (особенно у облачных провайдеров).
+# [default: "True"]
+DATABASE_POOL_PRE_PING="True"
+
+# Когда True, перед выполнением запросов (query/scalar и т.п.) Session автоматически вызывает flush(),
+# т.е. отправляет в БД все накопленные изменения (INSERT/UPDATE/DELETE), чтобы результаты запросов
+# были последовательны с текущим состоянием сессии.
+# [default: "False"]
+DATABASE_AUTO_FLUSH="False"
+
+# В старых версиях SQLAlchemy autocommit=True переводило сессию в "режим без транзакции",
+# т.е. позволялo выполнять операции без явного begin() / commit().
+# Устарел/удалён в подходе SQLAlchemy 2.0; его использование не рекомендуется.
+# [default: "False"]
+DATABASE_AUTO_COMMIT="False"
+
+# После коммита объекты в сессии помечаются как expired - при следующем доступе к атрибуту
+# SQLAlchemy попытается автоматически подгрузить актуальные данные из БД (выполнит SELECT).
+# Если False, объекты остаются валидными в памяти и не будут автоматически "проверяться"/обновляться после коммита.
+# [default: "False"]
+DATABASE_EXPIRE_ON_COMMIT="False"
+
+
+# **Настройки ограничений документа**
+
+# Максимальный размер загружаемого документа в 'POST /v1/documents/upload'
+# [default: "25"]
+DR_MAX_UPLOAD_MB="25"
+
+# Разрешенные расширения документа в 'POST /v1/documents/upload'
+# [default: '[".pdf", ".docx"]']
+DR_ALLOWED_EXTENSIONS='[".pdf", ".docx"]'
+
+
+# **Настройки эмбеддинг модели**
 
 # Название модели (подготовленная заранее в SentenceTransformer, или Hugging Face Hub) или путь к модели на диске.
 # [default: "sentence-transformers/all-MiniLM-L6-v2"]
@@ -164,6 +105,113 @@ EMBEDDING_CACHE_FOLDER="None"
 # Аутентификационный токен Hugging Face для загрузки приватных моделей.
 # [default: "None"]
 EMBEDDING_TOKEN="None"
+
+
+# **Настройки разделителя текста**
+
+# Максимальная длина одного фрагмента в символах.
+# [default: "500"]
+TEXT_SPLITTER_CHUNK_SIZE="500"
+
+# Число символов перекрытия между соседними фрагментами.
+# [default: "50"]
+TEXT_SPLITTER_CHUNK_OVERLAP="50"
+
+
+# **Настройки заглушек для локальной разработки**
+
+# Путь для хранения необработанных файлов.
+# [default: "./local_storage/raw/"]
+RAW_STORAGE_PATH="./local_storage/raw/"
+
+# Путь для хранения векторных документов.
+# [default: "./local_storage/index/"]
+INDEX_PATH="./local_storage/index/"
+
+
+# **Настройки MinIO**
+
+# Адрес MinIO/S3-совместимого сервера.
+# Обычно в виде host:port (например minio.local:9000) или URL без схемы.
+# [default: "None"]
+MINIO_ENDPOINT="None"
+
+# Имя бакета (bucket), в котором будут храниться сырые файлы.
+# [default: "raw-zone"]
+MINIO_BUCKET_RAW="raw-zone"
+
+# Имя бакета (bucket), в котором будут храниться обработанные файлы.
+# [default: "silver-zone"]
+MINIO_BUCKET_SILVER="silver-zone"
+
+# Публичный ключ / идентификатор доступа для аутентификации к MinIO/S3.
+# [default: "None"]
+MINIO_ACCESS_KEY="None"
+
+# Секретный ключ для подписи запросов к сервису MinIO/S3.
+# [default: "None"]
+MINIO_SECRET_KEY="None"
+
+# Временный (STS) токен сессии - используется вместе с access_key/secret_key для временных учётных записей.
+# [default: "None"]
+MINIO_SESSION_TOKEN="None"
+
+# Флаг, указывающий, использовать ли TLS/HTTPS при подключении к адресу MinIO/S3.
+# [default: "False"]
+MINIO_SECURE="False"
+
+# Имя региона (например, 'us-east-1') - может влиять на создание бакетов и некоторые клиентские настройки.
+# [default: "None"]
+MINIO_REGION="None"
+
+
+# **Настройки Qdrant**
+
+# URL сервера Qdrant
+# [default: "None"]
+QDRANT_URL="None"
+
+# Имя коллекции
+# [default: "notebook_chunks"]
+QDRANT_COLLECTION="notebook_chunks"
+
+# Хост (альтернативный способ указания адреса)
+# [default: "None"]
+QDRANT_HOST="None"
+
+# HTTP-порт
+# [default: "6333"]
+QDRANT_PORT="6333"
+
+# gRPC-порт
+# [default: "6334"]
+QDRANT_GRPC_PORT="6334"
+
+# API-ключ для доступа (если требуется)
+# [default: "None"]
+QDRANT_API_KEY="None"
+
+# Использовать HTTPS
+# [default: "False"]
+QDRANT_USE_HTTPS="False"
+
+# Предпочитать gRPC соединение
+# [default: "False"]
+QDRANT_PREFER_GRPC="False"
+
+# Таймаут запросов (секунды)
+# [default: "30"]
+QDRANT_TIMEOUT="30"
+
+# Размерность векторов (число измерений)
+# [default: "384"]
+QDRANT_VECTOR_SIZE="384"
+
+# Функция расстояния
+# Может быть "Dot", "Cosine", "Euclid" и "Manhattan"
+# Подробнее - https://qdrant.tech/documentation/concepts/search/#metrics
+# [default: "Cosine"]
+QDRANT_DISTANCE="Cosine"
 
 
 # **Настройки логирования**
@@ -200,17 +248,6 @@ LOG_RETENTION="14 days"
 # Подробнее: https://loguru.readthedocs.io/en/stable/api/logger.html#file
 # [default: "zip"]
 LOG_COMPRESSION="zip"
-
-
-# **Настройки разделителя текста**
-
-# Максимальная длина одного фрагмента в символах.
-# [default: "500"]
-TEXT_SPLITTER_CHUNK_SIZE="500"
-
-# Число символов перекрытия между соседними фрагментами.
-# [default: "50"]
-TEXT_SPLITTER_CHUNK_OVERLAP="50"
 
 
 # **Настройки времени**
