--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ qdrant-client = "^1.15.1"
 aiosqlite = "^0.21.0"
 pydantic = {extras = ["email"], version = "^2.11.7"}
 pyjwt = {extras = ["crypto"], version = "^2.10.1"}
-bcrypt = "^4.3.0"
+celery = {extras = ["redis"], version = "^5.5.3"}
+flower = "^2.0.1"
 
 [tool.poetry.group.ui.dependencies]
 streamlit = "^1.47.0"
